frontend/test/should_pass/nestedmod/nestedmodalt1.gm
#using "nestedmod/nestednestedmod/nestedmodbase.gm"

node class Foo extends Common
{
	foo : int;
}
